# algebra

./: .travis.yml  algebra.opam
lib/: dune  euclid.ml  group.ml  isomorphism.ml  matrix.ml  matrix.mli  monoid.ml  naive.ml  semigroup.ml
