opam-version: "1.2"
name: "algebra"
version: "0.0.1"
maintainer: "Guillaume Huysmans <ghuysmans99@gmail.com>"
authors: "Guillaume Huysmans <ghuysmans99@gmail.com>"
homepage: "https://github.com/ghuysmans/algebra/"
bug-reports: "https://github.com/ghuysmans/algebra/issues"
dev-repo: "https://github.com/ghuysmans/algebra/"
build: [["dune" "build" "-p" name "-j" jobs]]
depends: [
  "dune" {build}
]
